Update home page: link to contributed software
FossilOrigin-Name: 45f75fdc52c183824f211b001ef6685533206ad0442f25212e1950d2b4141277

--- a/www/index.wiki
+++ b/www/index.wiki
@@ -3,17 +3,22 @@
 <b>Zettelstore</b> is a software that collects and relates your notes
 (&ldquo;zettel&rdquo;) to represent and enhance your knowledge. It helps with
 many tasks of personal knowledge management by explicitly supporting the
-[https://en.wikipedia.org/wiki/Zettelkasten|Zettelkasten method]. The
-method is based on creating many individual notes, each with one idea or
-information, that are related to each other. Since knowledge is typically build
-up gradually, one major focus is a long-term store of these notes, hence the
-name &ldquo;Zettelstore&rdquo;.
+[https://en.wikipedia.org/wiki/Zettelkasten|Zettelkasten method]. The method is
+based on creating many individual notes, each with one idea or information,
+that are related to each other. Since knowledge is typically build up
+gradually, one major focus is a long-term store of these notes, hence the name
+&ldquo;Zettelstore&rdquo;.
 
-To get an initial impression, take a look at the [https://zettelstore.de/manual/|manual].
-It is a live example of the zettelstore software, running in read-only mode.
+To get an initial impression, take a look at the
+[https://zettelstore.de/manual/|manual]. It is a live example of the
+zettelstore software, running in read-only mode.
 
 The software, including the manual, is licensed under the
 [/file?name=LICENSE.txt&ci=trunk|European Union Public License 1.2 (or later)].
+
+[https://zettelstore.de/contrib|Zettelstore Contrib] contains contributed
+software, which often connect to Zettelstore via its API. Some of the software
+packages may be experimental.
 
 [https://twitter.com/zettelstore|Stay tuned]&hellip;
 <hr>
