Add endpoint /m to retrieve metadata
FossilOrigin-Name: 4366e4f3da263104363674e3f79ff45786972f1e60450b0dd3542f30e36337d7

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -7,6 +7,8 @@
      from a given zettel: in many cases the title of a zettel must be treated
      separately.
      (minor: api)
+  *  Add API endpoint <tt>/m</tt> to retrieve just the metadata of a zettel.
+     (minor: api)
 
 <a name="0_0_15"></a>
 <h2>Changes for Version 0.0.15 (2021-09-17)</h2>
