--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -9,6 +9,15 @@
      (minor: api)
   *  Add API endpoint <tt>/m</tt> to retrieve just the metadata of a zettel.
      (minor: api)
+  *  New metadata value <tt>content-tags</tt> contains the tags that were given
+     in the zettel content. To put it simply, <tt>all-tags</tt> = <tt>tags</tt>
+     + <tt>content-tags</tt>.
+     (minor)
+  *  Calculating the context of a zettel stops at the home zettel.
+     (minor: api, webui)
+  *  When renaming or deleting a zettel, a warning will be given, if otherf
+     zettel reference the given zettel.
+     (minor: webui)
 
 <a name="0_0_15"></a>
 <h2>Changes for Version 0.0.15 (2021-09-17)</h2>
