--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -30,6 +30,11 @@
   *  Fix: when a very log word (longer than width of browser window) is given,
      still allow to scroll horizontally.
      (minor: webui)
+  *  Initial support for HTTP security headers (Permissions-Policy,
+     Referrer-Policy, X-Content-Type-Options, X-Frame-Options). Header values
+     are currently some constant values. Support for header
+     Content-Security-Policy will follow later (it should be customizable).
+     (minor: api, webui)
   *  Separate repository for [https://zettelstore.de/contrib/|contributed]
      software. First entry is a software for creating a presentation by using
      zettel.
