Visual helper to detect deprecated use of emphasized text
FossilOrigin-Name: a5fbd1383b6dfbc6633ff8df46df05082a5d4136f77a79227058310ce4ff3476

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -12,7 +12,8 @@
      reason is the collision with URLs that also contain the characters
      <tt>//</tt>. The ZMK encoding of a zettel may help with the transition
      (<tt>/v/{ZettelID}?_part=zettel&amp;_enc=zmk</tt>, on the Info page of
-     each zettel in the WebUI).
+     each zettel in the WebUI). Additionally, all deprecated uses of
+     <tt>//</tt> will be rendered with a dashed box within the WebUI.
      (breaking: Zettelmarkup).
   *  API client software is now a [https://zettelstore.de/client/|separate]
      project.
