--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -2,6 +2,8 @@
 
 <a name="0_2_0"></a>
 <h2>Changes for Version 0.2.0 (pending)</h2>
+  *  Remove support for <tt>//deprecated emphasized//</tt> Zettelmarkup.
+     (minor: Zettelmarkup)
 
 <a name="0_1"></a><a name="0_1_0"></a>
 <h2>Changes for Version 0.1 (2021-11-11)</h2>
