--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -2,6 +2,8 @@
 
 <a name="0_2_0"></a>
 <h2>Changes for Version 0.2.0 (pending)</h2>
+  *  Remove support for <tt>;;small text;;</tt> Zettelmarkup.
+     (breaking: Zettelmarkup)
   *  Remove support for <tt>//deprecated emphasized//</tt> Zettelmarkup.
      (minor: Zettelmarkup)
 
