--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -4,6 +4,11 @@
 <h2>Changes for Version 0.2.0 (pending)</h2>
   *  Remove support for <tt>;;small text;;</tt> Zettelmarkup.
      (breaking: Zettelmarkup)
+  *  Selecting zettel based on their metadata allows the same syntax as
+     searching for zettel content. For example, you can list all zettel that
+     have an identifier not ending with <tt>00</tt> by using the query
+     <tt>id=!&lt;00</tt>.
+     (minor: api, webui)
   *  Remove support for <tt>//deprecated emphasized//</tt> Zettelmarkup.
      (minor: Zettelmarkup)
 
