--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -11,6 +11,9 @@
      (minor: api, webui)
   *  Remove support for <tt>//deprecated emphasized//</tt> Zettelmarkup.
      (minor: Zettelmarkup)
+  *  Add options to profile the software. Profiling can be enabled at the
+     command line or via the administrator console.
+     (minor)
 
 <a name="0_1"></a><a name="0_1_0"></a>
 <h2>Changes for Version 0.1 (2021-11-11)</h2>
