Add command line flag to set global logging level
FossilOrigin-Name: ceab8e67ef2e53f806fe80ea0aa51916199f5c5ac891e7ee27671f2b4595e499

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -20,6 +20,9 @@
      (minor: api, webui)
   *  Remove support for <tt>//deprecated emphasized//</tt> Zettelmarkup.
      (minor: Zettelmarkup)
+  *  Add command line flag <tt>-l LEVEL</tt> to specify an application global
+     logging level.
+     (minor)
   *  Add options to profile the software. Profiling can be enabled at the
      command line or via the administrator console.
      (minor)
