Add computed zettel that contains log messages
FossilOrigin-Name: 573c833e0d76ff0475e4e0eb33c92bb94bff644c27e47537218c4ad5910f9efd

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -28,6 +28,8 @@
   *  Add command line flag <tt>-l LEVEL</tt> to specify an application global
      logging level.
      (minor)
+  *  Add computed zettel that contains the last 8192 log messages.
+     (minor)
   *  Add options to profile the software. Profiling can be enabled at the
      command line or via the administrator console.
      (minor)
