--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -13,6 +13,14 @@
      (major: webui)
   *  Add endpoint <tt>/u/{ID}</tt> to retrieve unlinked references.
      (major: api)
+  *  Provide a logging facility.
+     Log messages are written to standard output. Messages with level
+     &ldquo;information&rdquo; are also written to a circular buffer (of length
+     8192) which can be retrieved via a computed zettel. There is a command
+     line flag <tt>-l LEVEL</tt> to specify an application global logging level
+     on startup (default: &ldquo;information&rdquo;). Logging level can also be
+     changed via the administrator console, even for specific (sub-) services.
+     (major)
   *  The internal handling of zettel files is rewritten. This allows less
      reloads ands detects when the directory containing the zettel files is
      removed. The WebUI and the admin console allow to manually refresh the
@@ -25,11 +33,6 @@
      (minor: api, webui)
   *  Remove support for <tt>//deprecated emphasized//</tt> Zettelmarkup.
      (minor: Zettelmarkup)
-  *  Add command line flag <tt>-l LEVEL</tt> to specify an application global
-     logging level.
-     (minor)
-  *  Add computed zettel that contains the last 8192 log messages.
-     (minor)
   *  Add options to profile the software. Profiling can be enabled at the
      command line or via the administrator console.
      (minor)
