Add API call /x?_cmd=refresh to refresh internal data
FossilOrigin-Name: c55fcc93c604e74b1b98b29a10b22b49d770d9053b17914a31111b658d53943d

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -23,8 +23,8 @@
      (major)
   *  The internal handling of zettel files is rewritten. This allows less
      reloads ands detects when the directory containing the zettel files is
-     removed. The WebUI and the admin console allow to manually refresh the
-     internal state on demand.
+     removed. The API, WebUI, and the admin console allow to manually refresh
+     the internal state on demand.
      (major: box, webui)
   *  Selecting zettel based on their metadata allows the same syntax as
      searching for zettel content. For example, you can list all zettel that
