Document HTTP status code 204 if content is empty
FossilOrigin-Name: fb8d5043923088461f3c518cc964e278bee9a48679472d3fb2373fd7525794aa

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -39,6 +39,9 @@
   *  Add computed zettel that lists all supported parser / recognized zettel
      syntaxes.
      (minor)
+  *  If there is nothing to return, use HTTP status code 204, instead of 200 +
+     <tt>Content-Length: 0</tt>.
+     (minor: api)
 
 <a name="0_1"></a><a name="0_1_0"></a>
 <h2>Changes for Version 0.1 (2021-11-11)</h2>
