--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -39,6 +39,8 @@
   *  Add computed zettel that lists all supported parser / recognized zettel
      syntaxes.
      (minor)
+  *  Add API call to check for enabled authentication.
+     (minor: api)
   *  If there is nothing to return, use HTTP status code 204, instead of 200 +
      <tt>Content-Length: 0</tt>.
      (minor: api)
