--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -44,6 +44,9 @@
   *  If there is nothing to return, use HTTP status code 204, instead of 200 +
      <tt>Content-Length: 0</tt>.
      (minor: api)
+  *  Metadata key <tt>duplicates</tt> stores the duplicate file names, instead
+     of just a boolean value that there were duplicate file names.
+     (minor)
 
 <a name="0_1"></a><a name="0_1_0"></a>
 <h2>Changes for Version 0.1 (2021-11-11)</h2>
