--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -2,17 +2,19 @@
 
 <a name="0_2_0"></a>
 <h2>Changes for Version 0.2.0 (pending)</h2>
-  *  External metadata (e.g. for zettel with file extension other than
-     ".zettel") are stored in files without an extension. Metadata files with
-     extension ".meta" are still recognized, but result in a warning message.
-     In a future version, ".meta" files will be treated as ordinary content
-     files, possibly resulting in duplicate content.
-     (breaking: directory and file box)
   *  Remove support for <tt>;;small text;;</tt> Zettelmarkup.
      (breaking: Zettelmarkup)
   *  On macOS, the downloadable executable program is now called
      &ldquo;zettelstore&rdquo;, as on all other Unix-like platforms.
      (possibly breaking: macOS)
+  *  External metadata (e.g. for zettel with file extension other than
+     <tt>.zettel</tt>) are stored in files without an extension. Metadata files
+     with extension <tt>.meta</tt> are still recognized, but result in
+     a warning message. In a future version (probably v0.3), <tt>.meta</tt>
+     files will be treated as ordinary content files, possibly resulting in
+     duplicate content. In other words: usage of <tt>.meta</tt> files for
+     storing metadata is deprecated.
+     (possibly breaking: directory and file box)
   *  Show unlinked references in info page of each zettel. Unlinked references
      are phrases within zettel content that might reference another zettel with
      the same title as the phase.
@@ -46,6 +48,9 @@
      syntaxes.
      (minor)
   *  Add API call to check for enabled authentication.
+     (minor: api)
+  *  Renewing an API access token works even if authentication is not enabled.
+     This corresponds to the behaviour of optaining an access token.
      (minor: api)
   *  If there is nothing to return, use HTTP status code 204, instead of 200 +
      <tt>Content-Length: 0</tt>.
