--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -6,6 +6,8 @@
      files. Previoulsy, they were interpreted as metadata files. The
      interpretation as metadata files was deprecated in version 0.2.
      (breaking: directory and file/zip box)
+  *  Add syntax &ldquo;draw&rdquo; to produce some graphical representations.
+     (major)
   *  A previously duplicate file that is now useful (because another file was
      deleted) is now logged as such.
      (minor: directory and file/zip box)
