Document full transclusion
FossilOrigin-Name: fbac3cba9748d6bd71f6a63fb4ffb730118587f5ab8a8ebcad4c22dd2c6df6cb

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -8,6 +8,8 @@
      (breaking: directory and file/zip box)
   *  Add syntax &ldquo;draw&rdquo; to produce some graphical representations.
      (major)
+  *  Add Zettelmarkup syntax to specify full transclusion of other zettel.
+     (major: Zettelmarkup)
   *  A previously duplicate file that is now useful (because another file was
      deleted) is now logged as such.
      (minor: directory and file/zip box)
