Update manual: inline zettel + some fixes
FossilOrigin-Name: ae5231d81d6e84542004f968c6bd00a28f4b980334f42de2f98f748f6981600d

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -10,6 +10,9 @@
      (major)
   *  Add Zettelmarkup syntax to specify full transclusion of other zettel.
      (major: Zettelmarkup)
+  *  Add Zettelmarkup syntax to specify inline-zettel, both for
+     block-structured and for inline-structured elements.
+     (major: Zettelmarkup)
   *  A previously duplicate file that is now useful (because another file was
      deleted) is now logged as such.
      (minor: directory and file/zip box)
