Allow to mark a sequence of text within a zettel
FossilOrigin-Name: d3c1070091dd86e772a59d3a8dbd3dbd34a8dd96ac52ef9aa343746c5de26b5c

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -5,6 +5,9 @@
   *  Encoding &ldquo;djson&rdquo; renamed to &ldquo;zjson&rdquo; (<em>zettel
      json</em>).
      (breaking: api; minor: webui)
+  *  A sequence of inline-structured elements can be marked, not just a point
+     in the Zettelmarkup text.
+     (minor: zettelmarkup)
 
 <a name="0_3"></a>
 <h2>Changes for Version 0.3 (2022-02-09)</h2>
