--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -12,6 +12,10 @@
      selected zettel. It was introduced in <a href="#0_0_11">v0.0.11</a>, but
      disallows some future optimizations for searching zettel.
      (minor: api, webui)
+  *  Make metadata-based searches a little bit faster by executing
+     a (in-memory-based) full-text search first. Now only those zettel are
+     loaded from file that contain the metdata value.
+     (minor: api, webui)
 
 <a name="0_3"></a>
 <h2>Changes for Version 0.3 (2022-02-09)</h2>
