--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -17,11 +17,14 @@
   *  A sequence of inline-structured elements can be marked, not just a point
      in the Zettelmarkup text.
      (minor: zettelmarkup)
+  *  Change generated URLs for zettel-creation forms. If you have bookmarked
+     them, e.g. to create a new zettel, you should update.
+     (minor: webui)
   *  Remove support for metadata key <tt>no-index</tt> to suppress indexing
      selected zettel. It was introduced in <a href="#0_0_11">v0.0.11</a>, but
      disallows some future optimizations for searching zettel.
      (minor: api, webui)
-  *  Make metadata-based searches a little bit faster by executing
+  *  Make some metadata-based searches a little bit faster by executing
      a (in-memory-based) full-text search first. Now only those zettel are
      loaded from file that contain the metdata value.
      (minor: api, webui)
