--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -14,6 +14,12 @@
      a visual element with no semantic association. Now, the syntax
      <kbd>++...++</kbd> is obsolete.
      (breaking: Zettelmarkup).
+  *  Remove API call to parse Zettelmarkup texts and encode it as text and
+     HTML. Was call &ldquo;POST /v&rdquo;. It was needed to separately encode
+     the titles of zettel. The same effect can be achieved by fetching the
+     ZJSON representation and encode it using the function in the Zettelstore
+     client software.
+     (breaking: api)
   *  ZJSON will encode metadata value as pairs of a metadata type and metadata
      value. This allows a client to decode the associated value more easily.
      (minor: api)
