Add API call to retrieve version information
FossilOrigin-Name: d20c1fd6d2f946890d462d0ccc3d587ef55b1548b558b59cbb66203540045ff7

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -43,6 +43,8 @@
      a (in-memory-based) full-text search first. Now only those zettel are
      loaded from file that contain the metdata value.
      (minor: api, webui)
+  *  Add an API call to retrieve the version of the Zettelstore.
+     (minor: api)
 
 <a name="0_3"></a>
 <h2>Changes for Version 0.3 (2022-02-09)</h2>
