Allow to configure mem-box wrt. to maximum number of zettel and stored bytes.
FossilOrigin-Name: 319bc131b07bdd40b7e060e0ee8104733a92a5b97ab3e081cedb2a21cb176d41

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -45,6 +45,9 @@
      (minor: api, webui)
   *  Add an API call to retrieve the version of the Zettelstore.
      (minor: api)
+  *  Limit the amount of zettel and bytes to be stored in a memory box. Allows
+     to use it with public access.
+     (minor: box)
 
 <a name="0_3"></a>
 <h2>Changes for Version 0.3 (2022-02-09)</h2>
