--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -2,6 +2,11 @@
 
 <a name="0_5"></a>
 <h2>Changes for Version 0.5 (pending)</h2>
+  *  Removed zettel syntax &ldquo;draw&rdquo;. The new default syntax for
+     inline zettel is now &ldquo;text&rdquo;. A drawing can now be made by
+     using the &ldquo;evaluation block&rdquo; syntax (see below) by setting
+     the generic attribute to &ldquo;draw&rdquo;.
+     (breaking: zettelmarkup, api, webui)
   *  Add support for an &ldquo;evaluation block&rdquo; syntax in Zettelmarkup
      to allow interpretation of content by external software.
      (minor: zettelmarkup)
