--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -14,6 +14,9 @@
      and inline-structured elements). Currently, support only the syntax,
      but WebUI does not render these elements in a special way.
      (minor: zettelmarkup)
+  *  New startup configuration key <kbd>max-request-size</kbd> to limit a web
+     request body to prevent client sending too large requests.
+     (minor: api, webui)
 
 <a name="0_4"></a>
 <h2>Changes for Version 0.4 (2022-03-08)</h2>
